<resources>
  <string name="app_name">Greetings</string>
  <string name="action_settings">Settings</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">Greetings</string>
  <string name="second_fragment_label">User Profile</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>
  <string name="language">Language</string>
  <string name="user_profile">User Profile</string>
  <string name="navigation_drawer_open">Drawer open</string>
  <string name="navigation_drawer_close">Drawer close</string>
  <string name="name">Name: %s</string>
  <string name="funFact">Fun fact %s</string>
  <string name="hobby">hobby %s</string>
  <string name="email">email %s</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="register">Register</string>
  <string name="nameLabel">What\'s your name?"</string>
  <string name="hobbyLabel">What\'s your Hobby?</string>
  <string name="fun_fact_about_you">Fun fact about you.</string>
  <string name="select_language">Select Language.</string>
  <string name="welcome">Welcome! :]</string>
  <string name="already_registered_skip">Already registered? Skip</string>
  <string name="greeting">Hi %s!</string>

</resources>