<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="24dp"
  android:orientation="vertical"
  tools:context=".fragments.RegisterFragment">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="16dp"
    android:text="@string/welcome"
    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/nameLabel"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/nameTil"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Name">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/nameEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/hobbyLabel"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/hobbyTil"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Hobby">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/hobbyEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/fun_fact_about_you"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/funFactTil"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Fun fact">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/funFactEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text" />

  </com.google.android.material.textfield.TextInputLayout>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:text="@string/select_language"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/selectLanguageTil"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/language">

    <AutoCompleteTextView
      android:id="@+id/test"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="none" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/registerBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/register"
    android:layout_gravity="center_horizontal"
    android:padding="4dp"/>

</LinearLayout>