<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".fragments.UserProfileFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/Theme.GreetingsApp.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarProfile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolbarTextAppearance"
        app:popupTheme="@style/Theme.GreetingsApp.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/photoImageView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
      android:src="@drawable/photo"/>

    <TextView
      style="@style/textViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/name" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/nameTilProfile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint=""
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nameEditTextProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      style="@style/textViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/hobby" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/hobbyTilProfile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint=""
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/hobbyEditTextProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      style="@style/textViewStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/funFact" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/funFactTilProfile"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint=""
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/funFactEditTextProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
  </LinearLayout>
</androidx.core.widget.NestedScrollView>